z-index trick broke the background... fixing it

--- a/app/assets/stylesheets/components/accomplishments.css.scss
+++ b/app/assets/stylesheets/components/accomplishments.css.scss
@@ -4,9 +4,8 @@
   margin-top: 93px;
   width: $max-width / 2;
   position: fixed;
-  left: 50%;
+  left: 49.8%;
   margin-left: -$max-width - 24px;
-  z-index: -1;
 
   #accomplishment_description {
     width: 100%;
