--- a/app/assets/stylesheets/components/profile.css.scss
+++ b/app/assets/stylesheets/components/profile.css.scss
@@ -5,10 +5,9 @@
   margin-top: 93px;
   width: $width;
   position: fixed;
-  left: 50%;
+  left: 50.2%;
   margin-left: $width + 24px;
   padding-left: 10px;
-  z-index: -1;
 
   a {
     text-decoration: none;
